# mneme

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cloud  README.md  SECURITY.md  docker-compose.cloud.yml  progress.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: GUIDE.md  api.http  contributing.md  ecosystem.md  index.md  mkdocs.yml
docs/assets/: custom.css
docs/mneme/: cli.md  index.md  installation.md  quickstart.md
docs/mneme-ai/: index.md
docs/mneme-guardian/: index.md
migrations/: 001_initial.sql  002_fts5.sql  003_vectors.sql  004_tools.sql  005_sync.sql  006_sync_origin.sql  007_encryption.sql  008_fts5_encryption_aware.sql  009_entities.sql  010_conflict_candidates.sql  011_temporal_validity.sql  012_failure_mining.sql  013_consolidation.sql
src/: bench.rs  cloud.rs  compress.rs  consolidate.rs  error.rs  learn.rs  lib.rs  main.rs  update.rs
src/cli/: commands.rs  output.rs
src/config/: settings.rs
src/crypto/: engine.rs  keys.rs  mod.rs  store.rs
src/embeddings/: engine.rs  mod.rs  rerank.rs  similarity.rs  store.rs
src/export/: markdown.rs  mod.rs  obsidian.rs
src/http/: dashboard.rs  handlers.rs  mod.rs  router.rs
src/mcp/: mod.rs  server.rs  simple.rs  tools.rs
src/plugins/: manager.rs  manifest.rs  mod.rs
src/store/: db.rs  entities.rs  memory.rs  migrations.rs  mod.rs  search.rs
src/sync/: crdt.rs  engine.rs  mod.rs  peer.rs  protocol.rs
src/sync/transport/: file.rs  http.rs
src/tui/: app.rs  events.rs  graph.rs  mod.rs  ui.rs
src/watch/: mod.rs  watcher.rs
tests/: cli_commands_tests.rs  cli_tests.rs  cloud_tests.rs  compress_tests.rs  config_tests.rs  crypto_tests.rs  embeddings_tests.rs  entities_tests.rs  error_tests.rs  export_tests.rs  http_tests.rs  integration_tests.rs  mcp_extended_tests.rs  mcp_tests.rs  obsidian_tests.rs  plugin_tests.rs  rerank_tests.rs  search_tests.rs  store_extended_tests.rs  store_tests.rs  sync_tests.rs  tui_app_tests.rs  tui_graph_tests.rs  watch_tests.rs  watcher_new_tests.rs
